Completed Tutorial, and added extra back buttons

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -23,7 +23,8 @@
     <% end %>
   </tbody>
 </table>
-
 <br>
+
+<%= link_to 'Microposts', microposts_path%>
 
 <%= link_to 'New User', new_user_path %>
