--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,5 +10,29 @@
   <%= @user.email %>
 </p>
 
+
+<p>
+  <strong>First Micropost:</strong>
+
+  <%=@user.microposts.first.content%>
+</p>
+
+
+<p> <strong>Microposts:</strong></p>
+<table>
+<tbody>
+<% @user.microposts.each do |micropost| %>
+      <tr>
+        <td><%= micropost.content %></td>
+        <td><%= micropost.user_id %></td>
+        <td><%= link_to 'Show', micropost %></td>
+        <td><%= link_to 'Edit', edit_micropost_path(micropost) %></td>
+        <td><%= link_to 'Destroy', micropost, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+<% end %>
+</tbody>
+</table>
+
+
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
